Merged uckelman-current 3640:HEAD. Improved error handling. Serious problems are now reported to ErrorDialog.bug(Throwable). ReadErrorDialog, WriteErrorDialog added for indicating I/O failure. Added VASSAL.tools.FileUtils for comomn file-handling code. Added VASSAL.tools.ErrorUtils for common error-handling code. Version parsing moved to VASSAL.tools.version. No need to use reflection for getting AudioClips. Don't read unchanged files into memory whole when modifying ZIPs. Incrementally calculate checksums for files to add to ZIPs. Added synchronous ImageOp.getImage(). Stop using obselete PixelGrabber to create alpha mask. Numerous minor code modernizations. Unreviewed catches marked with FIXMEs.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@3905 67b53d14-2c14-4ace-a08f-0dab2b34000c